# server/openapi.json
@@ -106,6 +106,11 @@
             "title": "Reasoning Effort",
             "type": "string"
           },
+          "thinking_disabled": {
+            "default": false,
+            "title": "Thinking Disabled",
+            "type": "boolean"
+          },
           "use_tool_calls": {
             "default": true,
             "title": "Use Tool Calls",
@@ -155,6 +160,11 @@
             "default": "",
             "title": "Reasoning Effort",
             "type": "string"
+          },
+          "thinking_disabled": {
+            "default": false,
+            "title": "Thinking Disabled",
+            "type": "boolean"
           },
           "use_tool_calls": {
             "default": true,
@@ -251,6 +261,17 @@
               }
             ],
             "title": "Reasoning Effort"
+          },
+          "thinking_disabled": {
+            "anyOf": [
+              {
+                "type": "boolean"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Thinking Disabled"
           },
           "use_tool_calls": {
             "anyOf": [
